[package]
name = "separator"
version = "0.1.0"
authors = ["Saghm Rossi <saghmrossi@gmail.com>"]
description = "Formats numbers into strings with thousands separators for readability."
repository = "https://github.com/saghm/rust-separator"
readme = "README.md"
keywords = ["comma", "separate", "separator", "num", "number"]
license = "MIT"
