[package]
name = "separator"
edition = "2018"
version = "0.4.0"
authors = ["Saghm Rossi <saghmrossi@gmail.com>"]
description = "Formats numbers into strings with thousands separators for readability."
repository = "https://github.com/saghm/rust-separator"
readme = "README.md"
keywords = ["comma", "separate", "num", "number", "split"]
license = "MIT"
